--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chalk-template",
   "version": "0.1.0",
-  "description": "",
+  "description": "Simple and easy to use template engine for chalk",
   "email": "simon.mollweide@web.de",
   "author": "Simon Mollweide <simon.mollweide@web.de>",
   "url": "https://github.com/smollweide/chalk-template",
